--- a/atividades_1bi/a2_intro_html_css/caio/caio.html
+++ b/atividades_1bi/a2_intro_html_css/caio/caio.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="caio.css">
   <title>Document</title>
 </head>
+
 <body>
-  <h1>Caio</h1>
+  <h1 class="titulo">Caio Salvador Noboa</h1>
+
+  <h2 class="nome-serie">Frieren: Beyond Journey's End</h2>
+
+  <img src="/atividades_1bi/a2_intro_html_css/image/frieren.png">
+
+  <p class="descricao">Frieren: Beyond Journey's End (Frieren e a Jornada para o Além) é um anime de fantasia e drama,
+    produzido pela MADHOUSE, que acompanha a elfa imortal Frieren após a derrota do Rei Demônio com seu grupo de heróis.
+    Após décadas, ela enfrenta a mortalidade de seus companheiros, iniciando uma nova jornada para entender o valor do
+    tempo e as conexões humanas. </p>
+
+  <h4>Razões para assistir:</h4>
+  <ul>
+    <li>Reflexão sobre o Tempo</li>
+    <li>Animação de Alto Nível</li>
+    <li>Trilha Sonora e Atmosfera</li>
+    <li>Personagens Cativantes</li>
+    <li>Ritmo Contemplativo</li>
+  </ul>
 </body>
+
 </html>
