Alterações index e estilização

--- a/atividades_1bi/a2_intro_html_css/index.html
+++ b/atividades_1bi/a2_intro_html_css/index.html
@@ -5,15 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
+  <header>
+    <h1>Atividade 2</h1>
+  </header>
 
-  <h1>Atividade 2</h1>
-  <a href="caio/caio.html" target="_blank">Caio Salvador Noboa</a>
-  <br>
-  <a href="lorena/lorena.html" target="_blank">Lorena Canavez</a>
+  <main>
+    <h2>Alunos:</h2>
+    <ul>
+      <li>Caio Salvador Noboa</li>
+      <li>Lorena Canavez</li>
+    </ul>
 
+    <nav>
+      <a href="caio/caio.html" target="_blank">Frieren</a>
+      <br>
+      <a href="lorena/lorena.html" target="_blank">Stranger things</a>
+    </nav>
+  </main>
+
+  <footer>
+    <p>2026 - Programação WEB</p>
+  </footer>
 </body>
 
 </html>
